Added unittest to RunningJobsInfoDAO.getInstance() Fixed the upgrade code for the runningjobs table, so they ARE upgraded.